Update all configuration to U2U Solaris Mainnet
- Update wagmi.ts to use U2U Solaris Mainnet (Chain ID: 39)
- Update all env files to use mainnet RPC and settings
- Update staking screen to check for mainnet chain ID
- Update contract address to 0x1fbA70E7A768448EC1Bf34DC53558b47De7b872c
- Update house cut to 2% (200 bps) in deployment script
- Network: U2U Solaris Mainnet
- RPC: https://rpc-mainnet.u2u.xyz
- Explorer: https://u2uscan.xyz
- Chain ID: 39

--- a/Contracts/env.u2u.example
+++ b/Contracts/env.u2u.example
@@ -1,4 +1,4 @@
-# U2U Nebulas Testnet Configuration
+# U2U Solaris Mainnet Configuration
 # Copy this file to .env for U2U deployment
 
 # ============================================
@@ -16,20 +16,20 @@ SERVER_SIGNER=0xYOUR_SERVER_SIGNER_ADDRESS
 # Fee recipient address (for house cut)
 FEE_RECIPIENT=0xYOUR_FEE_RECIPIENT_ADDRESS
 
-# House cut in basis points (500 = 5%)
-HOUSE_CUT_BPS=500
+# House cut in basis points (200 = 2%)
+HOUSE_CUT_BPS=200
 
 # ============================================
 # U2U NETWORK CONFIGURATION
 # ============================================
 # Network details
-NETWORK_NAME=U2U Nebulas Testnet
-RPC_URL=https://rpc-nebulas-testnet.u2u.xyz
-CHAIN_ID=2484
+NETWORK_NAME=U2U Solaris Mainnet
+RPC_URL=https://rpc-mainnet.u2u.xyz
+CHAIN_ID=39
 SYMBOL=U2U
-BLOCK_EXPLORER=https://testnet.u2uscan.xyz
+BLOCK_EXPLORER=https://u2uscan.xyz
 
 # ============================================
 # CONTRACT ADDRESSES (will be populated after deployment)
 # ============================================
-PEPASUR_CONTRACT_ADDRESS=
+PEPASUR_CONTRACT_ADDRESS=0x1fbA70E7A768448EC1Bf34DC53558b47De7b872c
