--- a/backend/env.u2u.example
+++ b/backend/env.u2u.example
@@ -1,14 +1,14 @@
-# Backend Environment Configuration for U2U Nebulas Testnet
+# Backend Environment Configuration for U2U Solaris Mainnet
 PORT=3001
 HOST=0.0.0.0
 
 # U2U Blockchain Configuration
-U2U_ACCESS_NODE=https://rpc-nebulas-testnet.u2u.xyz
-U2U_NETWORK=testnet
-U2U_CHAIN_ID=2484
+U2U_ACCESS_NODE=https://rpc-mainnet.u2u.xyz
+U2U_NETWORK=mainnet
+U2U_CHAIN_ID=39
 
 # Contract Addresses
-PEPASUR_CONTRACT_ADDRESS=0xYOUR_DEPLOYED_CONTRACT_ADDRESS
+PEPASUR_CONTRACT_ADDRESS=0x1fbA70E7A768448EC1Bf34DC53558b47De7b872c
 
 # Game Configuration
 DEFAULT_STAKE_AMOUNT=10000000000000000
