--- a/frontend/env.u2u.example
+++ b/frontend/env.u2u.example
@@ -1,13 +1,13 @@
-# Frontend Environment Configuration for U2U Nebulas Testnet
+# Frontend Environment Configuration for U2U Solaris Mainnet
 # Backend API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
 
 # U2U Blockchain Configuration
-NEXT_PUBLIC_U2U_ACCESS_NODE=https://rpc-nebulas-testnet.u2u.xyz
-NEXT_PUBLIC_U2U_NETWORK=testnet
-NEXT_PUBLIC_U2U_CHAIN_ID=2484
-NEXT_PUBLIC_PEPASUR_CONTRACT_ADDRESS=0xYOUR_DEPLOYED_CONTRACT_ADDRESS
+NEXT_PUBLIC_U2U_ACCESS_NODE=https://rpc-mainnet.u2u.xyz
+NEXT_PUBLIC_U2U_NETWORK=mainnet
+NEXT_PUBLIC_U2U_CHAIN_ID=39
+NEXT_PUBLIC_PEPASUR_CONTRACT_ADDRESS=0x1fbA70E7A768448EC1Bf34DC53558b47De7b872c
 
 # Game Configuration
 NEXT_PUBLIC_DEFAULT_STAKE_AMOUNT=10000000000000000
@@ -16,7 +16,7 @@ NEXT_PUBLIC_DEFAULT_MAX_PLAYERS=10
 NEXT_PUBLIC_GAME_TIMEOUT_SECONDS=15
 
 # Development Configuration
-NEXT_PUBLIC_DEV_MODE=true
-NEXT_PUBLIC_ENABLE_DEBUG_LOGS=true
+NEXT_PUBLIC_DEV_MODE=false
+NEXT_PUBLIC_ENABLE_DEBUG_LOGS=false
 
 
